compiler-core/src/go/tests/snapshots/gleam_core__go__tests__modules__alias_aliased_constant.snap
---
source: compiler-core/src/go/tests/modules.rs
expression: "\nimport rocket_ship.{ x as y }\nconst z = y\n"
snapshot_kind: text
---
----- SOURCE CODE

import rocket_ship.{ x as y }
const z = y


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
  rocket_ship_P "example.com/todo/thepackage/rocket_ship"
)

const _ = gleam_P.Use_Import
const _ = rocket_ship_P.Use_Import
const Use_Import byte = 0

var z gleam_P.Int_t = rocket_ship_P.X
