compiler-core/src/go/tests/snapshots/gleam_core__go__tests__modules__empty_module.snap
---
source: compiler-core/src/go/tests/modules.rs
expression: ""
snapshot_kind: text
---
----- SOURCE CODE


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0
