compiler-core/src/go/tests/snapshots/gleam_core__go__tests__modules__nested_nested_fn_call.snap
---
source: compiler-core/src/go/tests/modules.rs
expression: "import one/two/three\npub fn go() { three.go() }"
snapshot_kind: text
---
----- SOURCE CODE
import one/two/three
pub fn go() { three.go() }

----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
  three_P "example.com/todo/thepackage/one/two/three"
)

const _ = gleam_P.Use_Import
const _ = three_P.Use_Import
const Use_Import byte = 0

func Go() gleam_P.Int_t {
  return three_P.Go()
}
